<resources>
    <string name="app_name">Android_API</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="search">Search</string>
    <string name="view">view</string>
    <string name="update">update</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="image">image</string>
    <string name="todo">TODO</string>
    <string name="itemid">ItemID:</string>
    <string name="description">Description:</string>
    <string name="sell">Sell:</string>
    <string name="cost">Cost:</string>
    <string name="textview">TextView</string>
    <string name="image_string">Image string:</string>
</resources>